<resources>
    <string name="app_name">Aker</string>
    <string name="title_activity_dash_borde">DashBorde</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Item Bets</string>
    <string name="menu_slideshow">My Bets</string>
    <string name="menu_all">All Bets</string>
    <string name="menu_Other">Other Bets</string>
    <string name="menu_Profile">Profile</string>


    <string name="full_name">Full Name</string>
    <string name="back_to_home">Edit Profile</string>
    <string name="username_title">User Name</string>
    <string name="username">"@Blk"</string>
    <string name="phone_title">Phone</string>
    <string name="phone">+251 91 335 7402</string>
    <string name="age">18</string>
    <string name="address_title">Address</string>
    <string name="address">City, Street</string>
    <string name="email_title">Email</string>
    <string name="email">blk.examble@gmail.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>